--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vera - Mental Health Chat</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="/style.css" rel="stylesheet">
+<script src="/script.js"></script>
 </head>
 <body>
   <div class="chat-container">
@@ -15,7 +16,5 @@
       <button type="submit">Send</button>
     </form>
   </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
