--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vera - Mental Health Chat</title>
-  <link href="/style.css" rel="stylesheet">
-<script src="/script.js"></script>
+  <link href="./style.css" rel="stylesheet">
+  <script defer src="./script.js"></script>
 </head>
 <body>
   <div class="chat-container">
